<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PostDataActivity">


    <EditText
        android:id="@+id/single_post_activity_brand_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/brand"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/single_post_activity_model_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/model"
        android:inputType="textPersonName" />

    <Spinner
        android:id="@+id/single_post_activity_type_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"/>

    <!--<EditText-->
        <!--android:id="@+id/single_post_activity_type_edittext"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:ems="10"-->
        <!--android:hint="@string/type"-->
        <!--android:inputType="textPersonName" />-->

    <EditText
        android:id="@+id/single_post_activity_serialnumber_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/serial_number"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/single_post_activity_tuning_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/tuning"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/single_post_activity_stringgauge_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/string_gauge"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/single_post_activity_delete_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onDeleteClick"
        android:text="@string/delete_button" />

    <Button
        android:id="@+id/single_post_update_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onUpdateClick"
        android:text="@string/update_button" />

    <Button
        android:id="@+id/single_post_cancle_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onCancleClick"
        android:text="@string/cancle_button" />

</LinearLayout>