<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardElevation="15dp"
    app:contentPadding="20dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:id="@+id/card_linearlayout"
        android:layout_width="346dp"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/card_label_brand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/brand"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/card_brand_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                tools:text="Brand:" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/card_label_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/model"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/card_model_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                tools:text="Model:" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/card_label_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/type"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/card_type_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                tools:text="Type:" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/card_label_tuning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/tuning"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/card_tuning_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                tools:text="Tuning:" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/card_label_string_gauge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/string_gauge"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/card_string_gauge_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                tools:text="String Gauge:" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/card_label_serial_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/serial_number"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/card_serialnumber_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                tools:text="Serial Number:" />
        </LinearLayout>

        <ImageView
            android:id="@+id/card_image_imageview"
            android:layout_width="300dp"
            android:layout_height="250dp"
            android:contentDescription="image goes here"
            app:srcCompat="@android:drawable/ic_menu_report_image" />


    </LinearLayout>


</android.support.v7.widget.CardView>